<resources>
    <string name="app_name">SmartRoutes</string>
    <string name="title_activity_main">Menu</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_login">SmartRoutes</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Enter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="message">"ENTRO AQUI!"</string>
    <string name="message1">"ENTRO EN EL MAPA!"</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">La contraseña debe tener mas de 5 caracteres</string>
    <string name="login_failed">"El Login ha fallado"</string>

    <string name="start_button_text">Empezar</string>
    <string name="stop_button_text">Parar</string>
    <string name="location_access_needed">Esta aplicación necesita acceso a la localización</string>
    <string name="grant_location_access">Por favor conceda permisos de localización para que la aplicación pueda detectar balizas </string>
    <string name="not_support_bluetooth_msg">Este dispositivo no soporta bluetooth, no es posible buscar balizas</string>
    <string name="cancel_button_text">Cancelar</string>
    <string name="location_disabled">Localización en modo alta precisión no activado</string>
    <string name="location_settings">Abrir ajustes de localización</string>
    <string name="location_not_granted">Ya que el permiso de localización no ha sido concedido,</string>
    <string name="cannot_discover_beacons">esta aplicación no podrá buscar balizas</string>
    <string name="funcionality_limited">Funcionalidad limitada</string>
    <string name="no_bluetooth_msg">Con el bluetooth desactivado no es posible buscar balizas</string>
    <string name="start_looking_for_beacons">Empezando a buscar balizas</string>
    <string name="stop_looking_for_beacons">Parando la búsqueda de balizas</string>
    <string name="no_beacons_detected">No se han encontrado balizas</string>
    <string name="beacon_detected">Baliza : %1$s a %2$s metros, Rssi %3$s detectada!!</string>


    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="Cancelar">Cancelar</string>
    <string name="btn_atras">"Atras"</string>

    <string name="conf_nuno">"n1"</string>
    <string name="conf_a">"1"</string>
    <string name="conf_b">"2"</string>
    <string name="conf_c">"3"</string>
    <string name="conf_d">"4"</string>
    <string name="conf_e">"5"</string>
    <string name="btn_aceptar">"aceptar"</string>
    <string name="btn_cancelar">"cancelar"</string>
    <string name="btn_aula">"Info aula"</string>
    <string name="btn_acceso">"acceso"</string>
    <string name="btn_salir">"Salir"</string>
    <string name="localizacion">"Estas en la "</string>
    <string name="todo">TODO</string>
    <string name="Backbotton">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottonbackmain">"Guias"</string>
    <string name="bottonbackout">"Rutas de Exteriores"</string>
    <string name="bottonbackindoor">"Rutas de Interiores"</string>
    <string name="edificio">"Aulas"</string>

    <!--String pruebas scan-->
    <string name="ble_not_supported">BLE no es compatible</string>
    <string name="label_data">Dato:</string>
    <string name="bluetooth_not_supported">Bluetooth no compatible.</string>
    <string name="error_bluetooth_not_supported">Error Bluetooth no compatible.</string>
    <string name="unknown_device">Dispositivo desconocido</string>
    <string name="unknown_characteristic">Característica desconocida</string>
    <string name="unknown_service">Servicio desconocido</string>
    <string name="label_device_address">Direccion dispositivo:</string>
    <string name="label_state">Estado:</string>
    <string name="no_data">No hay datos</string>
    <string name="connected">Conectado</string>
    <string name="disconnected">Desconectado</string>
    <string name="title_devices">BLE Dispositivo Scan</string>
    <string name="mensaje_pantalla_rutas_ind">Rutas en interiores</string>
    <string name="mensaje_pantalla_inicio">Bienvenidos a esta app</string>
</resources>



