<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DialogoConfig">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/letra_blanca"
        android:orientation="vertical"
        tools:context=".Dialogo_Config">
        <!-- TODO: Update blank fragment layout -->
        <ScrollView
            android:id="@+id/ScrlView"
            android:layout_width="fill_parent"
            android:layout_height="164dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:backgroundTint="@color/colorPrimary"
                android:scrollbars="vertical">

                <RadioButton
                    android:id="@+id/rd_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_nuno" />

                <RadioButton
                    android:id="@+id/rd_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/conf_a" />

                <RadioButton
                    android:id="@+id/rd_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_b" />

                <RadioButton
                    android:id="@+id/rd_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_c" />

                <RadioButton
                    android:id="@+id/rd_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_d" />

                <RadioButton
                    android:id="@+id/rd_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_e" />
            </RadioGroup>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn"
                style="@android:style/Theme.DeviceDefault.Dialog.MinWidth"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.01"
                android:autoText="false"
                android:background="@drawable/borderedondos"
                android:text="@string/btn_aceptar"
                android:textColor="@color/letra_blanca"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:style="@style/Base.Theme.AppCompat.Dialog.FixedSize"
                tools:text="@string/btn_aceptar" />

            <Button
                android:id="@+id/btn_can"

                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="60dp"
                android:autoText="false"
                android:background="@drawable/borderedondos_rojo"
                android:text="@string/btn_cancelar"
                android:textColor="@color/letra_blanca"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:style="@style/Base.Theme.AppCompat.Dialog.FixedSize"
                tools:text="@string/btn_cancelar" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>